Fix up spacing

--- a/src/App.css
+++ b/src/App.css
@@ -61,4 +61,5 @@
   left: 26.2%;
   width: 73.8%;
   height: 100%;
+  padding-top: 0.3rem;
 }
